Fix clipping and alignment of dependency graph

--- a/assets/stylesheets/dependency_graph.scss
+++ b/assets/stylesheets/dependency_graph.scss
@@ -5,6 +5,9 @@
 }
 
 #dependencygraph {
+    display: block;
+    margin: auto;
+
     text {
         font-weight: 300;
         font-family: $default-font;
